Atualizada foto do perfil

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
       <div class="row container">
         <div class="col-md-auto text-center">
-          <img class="img-fluid p-2" src="assets/maxwel-200.png" alt="" style="width: 150px">
+          <img class="img-fluid p-2" src="assets/maxwel.png" alt="" style="width: 150px">
         </div>
         <div class="col p-2">
           <p> Sou graduado em Engenharia Elétrica pela Universidade Federal do Espírito Santo (UFES). Possuo especialização em Controle da Administração Pública pela Universidade Federal do Espírito Santo (UFES) e em Gestão Pública pelo Instituto Federal de Educação Ciência e Tecnologia do Espírito Santo (IFES).</p>
