--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+  <nav class="navbar fixed-top navbar-expand-md bg-dark navbar-dark">
     <div class="container">
       <a href="#" class="navbar-brand">Maxwel de Souza Freitas</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
