--- a/index2.html
+++ b/index2.html
@@ -127,7 +127,7 @@
       </section> 
 
 
-      
+
       <!-- ======= Resume Section ======= -->
       <section id="resume" class="resume section-bg">
         <div class="container">
@@ -334,6 +334,82 @@
         </div>
       </section>
       <!-- End Certification Section -->  
+
+          <!-- ======= Contact Section ======= -->
+    <section id="contact" class="contact">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Informações de contato</h2>
+          <p>Há algum projeto no qual posso te ajudar? Entre em contato comigo, será um prazer.</p>
+        </div>
+
+        <div class="row" data-aos="fade-in">
+
+          <div class="col-lg-6 d-flex align-items-stretch">
+            <div class="info">
+              <div class="address">
+                <i class="bi bi-geo-alt"></i>
+                <h4>Endereço:</h4>
+                <p>Rua Abiail do Amaral Carneiro, 41, Enseada do Suá, Vitória/ES</p>
+              </div>
+
+              <div class="email">
+                <i class="bi bi-envelope"></i>
+                <h4>Email:</h4>
+                <p>maxwel@maxwelfreitas.com.br</p>
+              </div>
+
+              <div class="phone">
+                <i class="bi bi-phone"></i>
+                <h4>Telefone:</h4>
+                <a href="https://api.whatsapp.com/send?phone=5527988236365&text=Ol%C3%A1,%20vi%20seu%20site%20pessoal%20e%20gostaria%20de%20entrar%20em%20contato.">+55 27 98823-6365</a>
+              </div>
+
+            </div>
+
+          </div>
+
+          <div class="col-lg-6 d-flex align-items-stretch">
+            <div class="info">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3741.622769873367!2d-40.29683438804394!3d-20.315875650364195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xb817ced1f8c9df%3A0x79c8930cea06163a!2sAnatel%20-%20Unidade%20Operacional%20no%20Estado%20do%20Esp%C3%ADrito%20Santo!5e0!3m2!1spt-BR!2sbr!4v1713629906046!5m2!1spt-BR!2sbr" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+            </div>
+
+          </div>
+
+          <!-- <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+              <div class="row">
+                <div class="form-group col-md-6">
+                  <label for="name">Seu Nome</label>
+                  <input type="text" name="name" class="form-control" id="name" required>
+                </div>
+                <div class="form-group col-md-6">
+                  <label for="name">Seu Email</label>
+                  <input type="email" class="form-control" name="email" id="email" required>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="name">Assunto</label>
+                <input type="text" class="form-control" name="subject" id="subject" required>
+              </div>
+              <div class="form-group">
+                <label for="name">Menssagem</label>
+                <textarea class="form-control" name="message" rows="10" required></textarea>
+              </div>
+              <div class="my-3">
+                <div class="loading">Loading</div>
+                <div class="error-message"></div>
+                <div class="sent-message">Sua mensagem foi enviada. Obrigado!</div>
+              </div>
+              <div class="text-center"><button type="submit">Enviar Mensagem</button></div>
+            </form>
+          </div> -->
+
+        </div>
+
+      </div>
+    </section><!-- End Contact Section -->
 
     </main>
 
