Atualizadas informações de contato

--- a/index2.html
+++ b/index2.html
@@ -441,7 +441,7 @@
 
           <div class="section-title">
             <h2>Informações de contato</h2>
-            <p>Há algum projeto no qual posso te ajudar? Entre em contato comigo, será um prazer.</p>
+            <p>Estou entusiasmado para compartilhar mais detalhes sobre minhas experiências e projetos específicos. Se você também está interessado em colaborar em projetos, sinta-se à vontade para entrar em contato comigo! Vamos explorar juntos!</p>
           </div>
 
           <div class="row" data-aos="fade-in">
