--- a/index2.html
+++ b/index2.html
@@ -97,7 +97,7 @@
     <section id="hero" class="d-flex flex-column justify-content-center align-items-left bg-dark p-5">
       <div class="hero-container" data-aos="fade-in">
         <h1>Maxwel de Souza Freitas</h1>
-        <p><span class="typed" data-typed-items="Especialista em Regulação (Anatel), Analista de dados, Engenheiro de dados"></span></p>
+        <p><span class="typed" data-typed-items="Especialista em Regulação (Anatel), Analista de dados, Cientista de dados"></span></p>
       </div>
     </section><!-- End Hero -->
 
@@ -286,7 +286,7 @@
       <!-- End Resume Section -->
 
 
-      <!-- ======= Resume Section ======= -->
+      <!-- ======= Certifications Section ======= -->
       <section id="certifications" class="certifications">
         <div class="container">
 
@@ -435,13 +435,74 @@
       </section>
       <!-- End Certification Section -->  
 
+          <!-- ======= Portfolio Section ======= -->
+    <section id="portfolio" class="portfolio section-bg">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Portfolio</h2>
+          <p>Até o momento, minha jornada profissional foi marcada por projetos desenvolvidos para uso pessoal. Esses projetos me permitiram explorar soluções específicas e aprimorar minhas habilidades em análise de dados e processamento de linguagem natural.</p>
+          <p>No entanto, estou animado com a perspectiva de expandir meu alcance. Embora ainda não tenha projetos públicos, tenho planos de compartilhar futuros trabalhos nesta seção do meu portfólio. Assim que tiver projetos prontos para o mundo, você os encontrará aqui!</p>
+        </div>
+
+        <div class="row" data-aos="fade-up">
+          <div class="col-lg-12 d-flex justify-content-center">
+            <ul id="portfolio-flters">
+              <li data-filter="*" class="filter-active">Todos</li>
+              <li data-filter=".filter-projects">Projetos</li>
+              <li data-filter=".filter-datasets">Datasets</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-projects">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/projects.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/projects.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-datasets">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/datasets.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <!-- 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div> 
+          -->
+
+        </div>
+
+      </div>
+    </section><!-- End Portfolio Section -->
+
       <!-- ======= Contact Section ======= -->
       <section id="contact" class="contact">
         <div class="container">
 
           <div class="section-title">
             <h2>Informações de contato</h2>
-            <p>Estou entusiasmado para compartilhar mais detalhes sobre minhas experiências e projetos específicos. Se você também está interessado em colaborar em projetos, sinta-se à vontade para entrar em contato comigo! Vamos explorar juntos!</p>
+            <p>Estou entusiasmado para compartilhar mais detalhes sobre minhas experiências e projetos específicos. 
+              Se você também está interessado em colaborar em projetos, sinta-se à vontade para entrar em contato comigo! 
+              Vamos explorar juntos!</p>
           </div>
 
           <div class="row" data-aos="fade-in">
