--- a/index2.html
+++ b/index2.html
@@ -48,13 +48,16 @@
         <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="#perfil" class="nav-link">Perfil</a>
+              <a href="#about" class="nav-link">Sobre mim</a>
             </li>
             <li class="nav-item">
-              <a href="#projetos" class="nav-link">Projetos</a>
+              <a href="#resume" class="nav-link">Formação</a>
             </li>
             <li class="nav-item">
-              <a href="#contato" class="nav-link">Contato</a>
+              <a href="#services" class="nav-link">Projetos</a>
+            </li>
+            <li class="nav-item">
+              <a href="#contact" class="nav-link">Contato</a>
             </li>
           </ul>
           <hr class="d-lg-none text-white-50">
@@ -126,110 +129,8 @@
         </div>
       </section> 
 
-    <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Skills</h2>
-          <p>Como um profissional dedicado à análise de dados, busco constantemente desafios que me permitam aplicar meu conhecimento e habilidades. Minha trajetória inclui anos de experiência na manipulação de dados complexos, desde a coleta até a análise e visualização.</p> 
-          <p>Recentemente, mergulhei no campo da inteligência artificial, explorando técnicas de aprendizado de máquina para extrair informações valiosas de textos. Nesse contexto, tenho me dedicado especialmente às técnicas de processamento de linguagem natural.</p>
-          <p>Além disso, estou empenhado em ampliar meu conhecimento e habilidades em outras áreas da inteligência artificial, como redes neurais artificiais.</p>
-        </div>
-
-        <div class="row skills-content">
-
-          <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
-            <span class="skill">Python</span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
-            <span class="skill">Pandas</span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
-            <span class="skill">Aprendizagem de máquina</span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
-            <span class="skill">Processamento de Linguagem Natural</span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
-            <span class="skill">Mineração de Texto</span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
-            <span class="skill">Redes Neurais Artificiais</span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
-            <span class="skill">Análise de Dados</span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
-            <span class="skill">Ciência de Dados</span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
-            <span class="skill">Inovação</span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
-            <span class="skill">Negociação</span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
-            <span class="skill">Gestão de Pessoas e Equipes</span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
-            <span class="skill">Liderança</span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Skills Section -->
-
       <!-- ======= Resume Section ======= -->
-      <section id="resume" class="resume">
+      <section id="resume" class="resume section-bg">
         <div class="container">
 
           <div class="section-title">
@@ -284,7 +185,6 @@
         </div>
       </section>
       <!-- End Resume Section -->
-
 
       <!-- ======= Certifications Section ======= -->
       <section id="certifications" class="certifications">
@@ -426,73 +326,141 @@
               </div>
             </div>
 
-
-
-            
-          </div>
-              
+          </div>              
         </div>
       </section>
-      <!-- End Certification Section -->  
+      <!-- End Certification Section --> 
 
-          <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+      <!-- ======= Skills Section ======= -->
+      <section id="skills" class="skills section-bg">
+        <div class="container">
+
+          <div class="section-title">
+            <h2>Skills</h2>
+            <p>Como um profissional dedicado à análise de dados, busco constantemente desafios que me permitam aplicar meu conhecimento e habilidades. Minha trajetória inclui anos de experiência na manipulação de dados complexos, desde a coleta até a análise e visualização.</p> 
+            <p>Recentemente, mergulhei no campo da inteligência artificial, explorando técnicas de aprendizado de máquina para extrair informações valiosas de textos. Nesse contexto, tenho me dedicado especialmente às técnicas de processamento de linguagem natural.</p>
+            <p>Além disso, estou empenhado em ampliar meu conhecimento e habilidades em outras áreas da inteligência artificial, como redes neurais artificiais.</p>
+          </div>
+
+          <div class="row skills-content">
+
+            <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
+              <span class="skill">Python</span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
+              <span class="skill">Pandas</span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
+              <span class="skill">Aprendizagem de máquina</span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
+              <span class="skill">Processamento de Linguagem Natural</span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
+              <span class="skill">Mineração de Texto</span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
+              <span class="skill">Redes Neurais Artificiais</span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
+              <span class="skill">Análise de Dados</span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
+              <span class="skill">Ciência de Dados</span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
+              <span class="skill">Inovação</span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
+              <span class="skill">Negociação</span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
+              <span class="skill">Gestão de Pessoas e Equipes</span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
+              <span class="skill">Liderança</span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </section><!-- End Skills Section -->
+ 
+
+
+    <!-- ======= Services Section ======= -->
+    <section id="services" class="services">
       <div class="container">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
+          <h2>Projetos</h2>
           <p>Até o momento, minha jornada profissional foi marcada por projetos desenvolvidos para uso pessoal. Esses projetos me permitiram explorar soluções específicas e aprimorar minhas habilidades em análise de dados e processamento de linguagem natural.</p>
           <p>No entanto, estou animado com a perspectiva de expandir meu alcance. Embora ainda não tenha projetos públicos, tenho planos de compartilhar futuros trabalhos nesta seção do meu portfólio. Assim que tiver projetos prontos para o mundo, você os encontrará aqui!</p>
         </div>
 
-        <div class="row" data-aos="fade-up">
-          <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">Todos</li>
-              <li data-filter=".filter-projects">Projetos</li>
-              <li data-filter=".filter-datasets">Datasets</li>
-            </ul>
+        <!-- https://icons.getbootstrap.com/ -->
+        <div class="row">
+          <div class="col-md-6 icon-box" data-aos="fade-up">
+            <div class="icon"><i class="bi bi-file-code"></i></div>
+            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat laudantium facere maxime quidem ab magnam harum delectus sequi similique quod!</p>
           </div>
-        </div>
-
-        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-projects">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/projects.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/projects.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
+          <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+            <div class="icon"><i class="bi bi-database"></i></div>
+            <h4 class="title"><a href="">Dolor Sitema</a></h4>
+            <p class="description">Doloribus voluptate perferendis culpa incidunt atque harum provident, aspernatur perspiciatis unde impedit commodi non, adipisci, totam animi quae quod architecto sit. Iure fugit natus reprehenderit optio, facilis tempora cum, vero ad officia veritatis, aliquid quas?</p>
           </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-datasets">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/datasets.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <!-- 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div> 
-          -->
-
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section><!-- End Services Section -->
 
       <!-- ======= Contact Section ======= -->
       <section id="contact" class="contact">
