Centralizar nome na tela inicial

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </nav>
 
     <!-- ======= Hero Section ======= -->
-    <section id="hero" class="d-flex flex-column justify-content-center align-items-left bg-dark p-5">
+    <section id="hero" class="d-flex flex-column justify-content-center align-items-center bg-dark p-5">
       <div class="hero-container" data-aos="fade-in">
         <h1>Maxwel de Souza Freitas</h1>
         <p><span class="typed" data-typed-items="Especialista em Regulação (Anatel), Analista de dados, Cientista de dados"></span></p>
