--- a/index.html
+++ b/index.html
@@ -199,6 +199,19 @@
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <div class="row">
                 <div class="col-auto">
+                  <img class="img-fluid" src="assets/img/deeplearnio.png" alt="" style="width: 50px">
+                </div>
+                <div class="col p-0">
+                  <h4 class="title"><a href="https://www.coursera.org/account/accomplishments/specialization/QXRF4MURDZP9">DeepLearning.AI TensorFlow Developer</a></h4>
+                  <h5>DeepLearning.AI</h5>
+                  <p>2024</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+              <div class="row">
+                <div class="col-auto">
                   <img class="img-fluid" src="assets/img/usp.jpg" alt="" style="width: 50px">
                 </div>
                 <div class="col p-0">
@@ -355,6 +368,13 @@
               <span class="skill">Pandas</span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 progress" data-aos="fade-up">
+              <span class="skill">TensorFlow</span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
